# hachi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
board/: build_hat.h  buildhat.h
boot2/: boot2_hachi.S
src/: CMakeLists.txt  hachi.c  hachi_config.h  led.c  led.h  memmap.ld  run_prog.S  xmodem.c  xmodem.h
